--- a/www/index.html
+++ b/www/index.html
@@ -18,10 +18,14 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
+    <!--Bibliotecas externas -->
+    <script src="lib/ngstorage/ngStorage.min.js"></script>
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers/sideMenuCtrl.js"></script>
     <script src="js/controllers/buscaCtrl.js"></script>
+    <script src="js/controllers/livrosAlugados.js"></script>
+    <script src="js/services/storageService.js"></script>
   </head>
   <body>
     <ion-nav-view></ion-nav-view>
