--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,8 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="lib/ionic-filter-bar/dist/ionic.filter.bar.css">
+    <link href="lib/mdi/css/materialdesignicons.min.css" media="all" rel="stylesheet" type="text/css">
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
@@ -22,11 +23,12 @@
     <!--Bibliotecas externas -->
     <script src="lib/ngstorage/ngStorage.min.js"></script>
     <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
+    <script src="lib/ionic-filter-bar/dist/ionic.filter.bar.js"></script>
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers/sideMenuCtrl.js"></script>
     <script src="js/controllers/buscaCtrl.js"></script>
-    <script src="js/controllers/livrosAlugados.js"></script>
+    <script src="js/controllers/livrosAlugadosCtrl.js"></script>
     <script src="js/services/storageService.js"></script>
   </head>
   <body>
