--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,7 @@
     <script src="cordova.js"></script>
 
     <!--Bibliotecas externas -->
+	
     <script src="lib/ngstorage/ngStorage.min.js"></script>
     <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
     <script src="lib/ionic-filter-bar/dist/ionic.filter.bar.js"></script>
@@ -30,6 +31,12 @@
     <script src="js/controllers/buscaCtrl.js"></script>
     <script src="js/controllers/livrosAlugadosCtrl.js"></script>
     <script src="js/services/storageService.js"></script>
+	<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBbICpn4-CSejddQcTBtguUm4WppLecQBc"></script>
+	
+	<script src="js/controllers/biblio_Db.js"></script>
+	<script src="js/controllers/GPS.js"></script>
+	<script src="js/controllers/biblio_exibi.js"></script>
+	<script src="js/controllers/biblio.js"></script>
   </head>
   <body>
     <ion-nav-view></ion-nav-view>
