--- a/www/index.html
+++ b/www/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <meta http-equiv="Content-Security-Policy" content="default-src *; script-src 'self' 'unsafe-inline' 'unsafe-eval' *; style-src  'self' 'unsafe-inline' *">
 
     <title></title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/mod_ionic_structure.css" rel="stylesheet">
     <link rel="stylesheet" href="lib/ionic-filter-bar/dist/ionic.filter.bar.css">
     <link href="lib/mdi/css/materialdesignicons.min.css" media="all" rel="stylesheet" type="text/css">
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
@@ -28,6 +28,7 @@
     <script src="lib/ionic-filter-bar/dist/ionic.filter.bar.js"></script>
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/controllers/homeCtrl.js"></script>
     <script src="js/controllers/sideMenuCtrl.js"></script>
     <script src="js/controllers/buscaCtrl.js"></script>
     <script src="js/controllers/livrosAlugadosCtrl.js"></script>
