Update GPS Update Verificacoes Update PopUp Update Biblio_Db

--- a/www/index.html
+++ b/www/index.html
@@ -32,13 +32,13 @@
     <script src="js/controllers/sideMenuCtrl.js"></script>
     <script src="js/controllers/buscaCtrl.js"></script>
     <script src="js/controllers/livrosAlugadosCtrl.js"></script>
-    <script src="js/services/storageService.js"></script>
+	<script src="lib/jquery/jquery-2.2.0.min.js"></script>
 	<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBbICpn4-CSejddQcTBtguUm4WppLecQBc"></script>
 	
 	<script src="js/controllers/biblio_Db.js"></script>
+	<script src="js/controllers/biblio.js"></script>
 	<script src="js/controllers/GPS.js"></script>
 	<script src="js/controllers/biblio_exibi.js"></script>
-	<script src="js/controllers/biblio.js"></script>
   </head>
   <body>
     <ion-nav-view></ion-nav-view>
