--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,8 @@
     <script src="js/controllers/sideMenuCtrl.js"></script>
     <script src="js/controllers/buscaCtrl.js"></script>
     <script src="js/controllers/livrosAlugadosCtrl.js"></script>
+    <script src="js/services/storageService.js"></script>
+    <script src="js/services/acervoDB.js"></script>
 	<script src="lib/jquery/jquery-2.2.0.min.js"></script>
 	<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBbICpn4-CSejddQcTBtguUm4WppLecQBc"></script>
 	
