Design melhorado Interface home

--- a/www/index.html
+++ b/www/index.html
@@ -8,9 +8,11 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+	
     <link href="css/mod_ionic_structure.css" rel="stylesheet">
     <link rel="stylesheet" href="lib/ionic-filter-bar/dist/ionic.filter.bar.css">
     <link href="lib/mdi/css/materialdesignicons.min.css" media="all" rel="stylesheet" type="text/css">
+	<link href="css/controle.css" rel="stylesheet">
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
@@ -37,7 +39,9 @@
 	<script src="lib/jquery/jquery-2.2.0.min.js"></script>
 	<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBbICpn4-CSejddQcTBtguUm4WppLecQBc"></script>
 	
+	<script src="js/controllers/Curio_Db.js"></script>
 	<script src="js/controllers/biblio_Db.js"></script>
+	
 	<script src="js/controllers/biblio.js"></script>
 	<script src="js/controllers/GPS.js"></script>
 	<script src="js/controllers/biblio_exibi.js"></script>
