Autocompletar Barra de pesquisa

--- a/www/index.html
+++ b/www/index.html
@@ -37,7 +37,7 @@
     <script src="js/services/storageService.js"></script>
     <script src="js/services/acervoDB.js"></script>
 	<script src="lib/jquery/jquery-2.2.0.min.js"></script>
-	<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBbICpn4-CSejddQcTBtguUm4WppLecQBc"></script>
+	<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBbICpn4-CSejddQcTBtguUm4WppLecQBc&libraries=places"></script>
 	
 	<script src="js/controllers/Curio_Db.js"></script>
 	<script src="js/controllers/biblio_Db.js"></script>
