--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="lib/ionic-filter-bar/dist/ionic.filter.bar.css">
     <link href="lib/mdi/css/materialdesignicons.min.css" media="all" rel="stylesheet" type="text/css">
 	<link href="css/controle.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/guia de codificacao/css/Glyphter.css">
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
