--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="lib/ionic-filter-bar/dist/ionic.filter.bar.css">
     <link href="lib/mdi/css/materialdesignicons.min.css" media="all" rel="stylesheet" type="text/css">
 	<link href="css/controle.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/guia de codificacao/css/Glyphter.css">
+    <link rel="stylesheet" href="css/guia%20de%20codificacao/css/Glyphter.css">
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
@@ -50,6 +50,7 @@
 	<script src="js/controllers/biblio.js"></script>
 	<script src="js/controllers/GPS.js"></script>
 	<script src="js/controllers/biblio_exibi.js"></script>
+    <script src="js/controllers/sobreCtrl.js"></script>
   </head>
   <body>
     <ion-nav-view></ion-nav-view>
